--- a/README
+++ b/README
@@ -7,8 +7,20 @@ A compiler with decent C++11 support
 
 Instructions (for Ubuntu Linux)
 
-sudo apt-get install liblpsolve55-dev build-essential
-make
+$ sudo apt-get install liblpsolve55-dev build-essential
+$ make
+
+Instructions (Mac OS X)
+Get lp_solve_5.5.2.0_dev_osx32.tar.gz from Sourceforge. Copy everything in the archive to the same folder as this.
+Change <lpsolve/lp_lib.h> in zs_wrap.cc to "lp_lib.h"
+Change g++ in Makefile to clang++
+Add the line LDFLAGS = -m32 to the top of the Makefile
+Add liblpsolve55.a after $(SRCS:.cc=.o) in the Makefile
+Now type make into the terminal.
+
+Instructions (Windows)
+
+I've already compiled it for Windows, don't bother.
 
 
 Important functions:
