--- a/README
+++ b/README
@@ -13,9 +13,11 @@ $ make
 Instructions (Mac OS X)
 Get lp_solve_5.5.2.0_dev_osx32.tar.gz from Sourceforge. Copy everything in the archive to the same folder as this.
 Change <lpsolve/lp_lib.h> in zs_wrap.cc to "lp_lib.h"
-Change g++ in Makefile to clang++
-Add the line LDFLAGS = -m32 to the top of the Makefile
-Add liblpsolve55.a after $(SRCS:.cc=.o) in the Makefile
+In the Makefile:
+  Change both instances of g++ to clang++
+  Add the line LDFLAGS = -m32 to the top
+  Add liblpsolve55.a after $(SRCS:.cc=.o)
+  Remove -lcolamd and -llpsolve55
 Now type make into the terminal.
 
 Instructions (Windows)
