--- a/README
+++ b/README
@@ -1,5 +1,4 @@
 Perfect play AI for BvS Number One (animecubed.com/billy)
-Untested optimizations branch - use at your own risk
 
 Requirements:
 
@@ -13,18 +12,19 @@ $ make
 
 Instructions (Any unix-ish system)
 Get the appropriate dev package from the lp_solve Sourceforge and uncompress it into this folder.
+If you can't find one, grab the src package and build it.
 Change <lpsolve/lp_lib.h> in zs_wrap.cc to "lp_lib.h"
 In the Makefile:
-  For 32-bit systems:
-    Add the line LDFLAGS = -m32 to the top
-    Add -m32 after -std=c++11
   Add liblpsolve55.a after $(SRCS:.cc=.o)
   Remove -lcolamd and -llpsolve55
+  If using 32-bit lp_solve on a 64-bit system:
+    Add the line LDFLAGS = -m32 to the top
+    Add -m32 after -std=c++11
 Now type make into the terminal.
 
 Instructions (Windows)
 
-I've already compiled it for Windows, don't bother.
+Don't. :D
 
 
 Important functions:
@@ -33,6 +33,6 @@ game_state.cc:act() implements the actual game mechanics
 zs_wrap.cc:zs_solve_() solves a zero-sum game as a linear program
 number_one_main.cc:moonburst_loop() runs the input loop
 eval_state.cc:eval_state() calculates the probability of winning
-              get_strat() returns a move chosen from subgame perfect equilibrium
+              get_strat() prints a move chosen from subgame perfect equilibrium
               distribution
               get_doubletime_strat() does what you'd expect.
