--- a/README
+++ b/README
@@ -14,13 +14,10 @@ $ make -f Makefile.ubuntu
 Instructions (Any unix-ish system)
 Get the appropriate dev package from the lp_solve Sourceforge and uncompress it into this folder.
 Change <lpsolve/lp_lib.h> in zs_wrap.cc to "lp_lib.h"
-In the Makefile:
-  For 32-bit systems:
-    Add the line LDFLAGS = -m32 to the top
-    Add -m32 after -std=c++11
-  Add liblpsolve55.a after $(SRCS:.cc=.o)
-  Remove -lcolamd and -llpsolve55
-Now type make into the terminal.
+For 64-bit systems using 32-bit lp_solve, edit Makefile.ubuntu as follows:
+  Add the line LDFLAGS = -m32 to the top
+  Add -m32 after -std=c++11
+$ make
 
 Instructions (Windows)
 
